--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,5 +25,5 @@ jobs:
         run: go build -v ./...
 
       - name: Change to project directory and run tests
-        run: cd $GITHUB_WORKSPACE go test -v ./...
+        run: cd $GITHUB_WORKSPACE && go test -v ./...
 
